--- a/FrancescoMoschella108973/CMakeLists.txt
+++ b/FrancescoMoschella108973/CMakeLists.txt
@@ -3,4 +3,4 @@ project(FrancescoMoschella108973 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(bvernan main.c bvernan.c bvernan.h)
+add_executable(bvernan main.c bvernan.c bvernan.h utilities.c utilities.h bvernan_data.c bvernan_data.h byte_type.h)
